<resources>
    <string name="app_name">Advanced Chat App</string>
    <string name="register_button">Need A new Account</string>
    <string name="user_name">User name</string>
    <string name="create_an_account">Create An Account</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="all_users">All Users</string>
    <string name="account_setting">Account Setting</string>
    <string name="logging_in">Logging in</string>
    <string name="please_wait">Please wait</string>
    <string name="failed_signup">Cannot Sign Up , Please Check the form and try again</string>
    <string name="added_success">Added Successfully</string>
    <string name="decline_success">Decline Successfully</string>
    <string name="failed_login">Login failed.</string>
    <string name="uploaded_success">Uploading Successfully</string>
    <string name="status_error_saving">Error while saving change please try again</string>
    <string name="img_uploading_error">Error Uploading Img</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there , iam using dvanced chat App</string>
    <string name="create_new_account">Create New Account</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="display_name">Display Name</string>
    <string name="default_user_status">Default User Status</string>
    <string name="last_msg">Last Msg</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="enter_message">Enter Message</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="your_email">Your Email</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="user_img">User Img</string>
    <string name="register_user">Registering User</string>
    <string name="wait_create_account">Please wait while we create your account</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="welcome_to_advanced_chat_app">Welcome to Advanced Chat App</string>
    <string name="add_imge_to_send">Add Imge to send</string>
    <string name="send_message_button">Send Message Button</string>
    <string name="profile_img">Profile Img</string>
    <string name="chat_user_img">Chat User Img</string>
    <string name="requester_img">Requester Img</string>
    <string name="sender_img">Sender Img</string>
    <string name="sent_img">sent Img</string>
    <string name="active_img">Active Img</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="friends_requests_name">Friends Requests Name</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="cancle_friend_request">Cancle Friend Request</string>
    <string name="unfriend">Unfriend</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="online">online</string>
    <string name="requests">Requests</string>
    <string name="uploding_img">Uploading Image...</string>
    <string name="please_wait_amoment">Please wait a moment</string>
    <string name="select_img">Select Image</string>
    <string name="chat">Chat</string>
    <string name="friends">Friends</string>
    <string name="select_option">Select Options</string>
    <string name="open_profile">Open Profile</string>
    <string name="send_message">Send Message</string>
    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="account_status">Account Status</string>
</resources>
